Update FAQ to mention Java issues